--- a/style.css
+++ b/style.css
@@ -15,18 +15,12 @@ html {
   }
 
 body {
-    display: flex;
     margin: 0;
     padding: 0;
     font-family: var(--fuente-principal);
     color: var(--color-fuente);
     font-size: 1.6rem;
     line-height: 2;
-}
-
-html, body {
-    height: 100%;
-    width: 100%;
 }
 
 a {
@@ -37,42 +31,37 @@ ul {
     list-style: none;
 }
 
-img {
-    height: 2rem;
-    width: 2rem;
+.container {
+    background-color: #66757F;
+    height: 100vh;
+    width: 100%;
+    display: grid;
+    grid-template-areas: "aside navbar navbar navbar"
+                         "aside header header header"
+                         "aside main main main";
+    grid-template-columns: 20rem 1fr 1fr 1fr;
+    grid-template-rows: 7rem 7rem 1fr;
 }
 
-.aside-container {
-    height: 100%;
-    width: 30%;
+.aside {
+    grid-area: aside;
     background-color: var(--color-primario);
-    color: white;
 }
 
-.main-container {
-    display: flex;
-    flex-direction: column;
+.navbar {
+    grid-area: navbar;
+    background-color: var(--color-fuente);
 }
 
-.nav-container {
-    display: flex;
-    height: 4rem;
+.header {
+    grid-area: header;
+    background-color: var(--color-fuente);
+}
+
+.main {
+    grid-area: main;
     background-color: var(--color-terciario);
 }
 
-.search {
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 70%;
-}
 
-.search input {
-    width: 70%;
-    height: 2rem;
-}
 
-.profile {
-    display: flex;
-    width: 30%;
-}
