--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
     --fuente-principal: 'Roboto', sans-serif;
-    --color-primario: #55ACEE;
+    --color-primario: #2e94e2;
     --color-secundario: #292F33;
     --color-terciario: #66757F;
     --color-fuente: #E1EBED;
@@ -40,28 +40,274 @@ ul {
                          "aside header header header"
                          "aside main main main";
     grid-template-columns: 20rem 1fr 1fr 1fr;
-    grid-template-rows: 7rem 7rem 1fr;
+    grid-template-rows: 5.5rem 7rem 1fr;
 }
 
 .aside {
     grid-area: aside;
+    color: white;
     background-color: var(--color-primario);
+}
+
+.aside h1 {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 1rem;
+}
+
+.aside h1 span {
+    text-align: center;
+    font-size: 2.5rem;
+}
+
+.icon {
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    cursor: pointer;
+}
+
+.icon span:hover{
+    color: #1c4564;
+    transition: 500ms;
 }
 
 .navbar {
     grid-area: navbar;
-    background-color: var(--color-fuente);
+    display: flex;
+    justify-content: space-evenly;
+    color: black;
+    background-color: white;
+}
+
+.navbar .search{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 60%;
+}
+
+.navbar .search input{
+    width: 80%;
+    background-color:var(--color-fuente);
+    border: none;
+    border-radius: 1rem;
+}
+
+.navbar .profile{
+    display: flex;
+    width: 20%;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.navbar .profile img{
+    max-height: 3rem;
+    width: auto;
+    border-radius: 50%;
+}
+
+.navbar .profile .name{
+    font-size: 1.5rem;
 }
 
 .header {
     grid-area: header;
-    background-color: var(--color-fuente);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0rem 4rem;
+    background-color: white;
+    color: black;
 }
 
+.header .header-profile{
+    display: flex;
+    justify-content: space-between;
+    width: 40%;
+    height: 100%;
+}
+
+.header .header-profile .image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header .header-profile .image-container img{
+    max-height: 6rem;
+    width: auto;
+    border-radius: 50%;
+} 
+
+.header .header-profile .profile-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    width: 80%;
+}
+
+.header .header-profile .profile-container h2{
+    font-size: 1.7vw;
+    margin: 0;
+}
+
+.header .header-profile .profile-container p{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin: 0;
+}
+
+.header-options{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 30%;
+}
+
+button {
+	background-color:var(--color-primario);
+    font-size: 1.3rem;
+    color: white;
+    height: 3rem;
+    width: 8rem;
+    border: none;
+    border-radius: 1.5rem;
+    cursor: pointer;
+
+}
+button:hover {
+    background-color: #1c4564;
+    transition: 1000ms;
+}
 .main {
     grid-area: main;
-    background-color: var(--color-terciario);
+    background-color: var(--color-fuente);
+    display: flex;
 }
 
+.main-1{
+    width: 70%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: .5rem;
+    padding: 2rem 1rem;
+}
 
+.body-projects{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-start;
+    font-size: 1.1rem;
+    background-color: white;
+    padding: 1rem;
+    height: 95%;
+    width: 95%;
+    border-radius: 1rem;
+    border-left: 0.6rem solid #e4b83f;
+}
 
+.body-projects h3{
+    color: black;
+    margin: 0;
+}
+
+.body-projects p{
+    color: grey;
+    margin: 0;
+}
+
+.links{
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+    
+}
+
+.body-projects i{
+    color: grey;
+    font-size: 1.3rem;
+}
+
+.body-projects i:hover{
+    color: #1c4564;
+    transition: 500ms;
+}
+.main-2{
+    color: black;
+    width: 25%;
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    margin: 0 1rem;
+    padding-bottom:2.5rem;
+}
+
+.annoucements{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    border-radius: 1rem;
+    padding: 1rem 2.5rem;
+}
+
+.annoucements-card h2{
+    margin: 0;
+    margin-top: 1rem;
+}
+
+.body-annoucements h3{
+    margin: 0;
+}
+
+.body-annoucements p{
+    margin: 0;
+    color: grey;
+    line-height: 1.2rem;
+}
+
+.body-trending{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 2rem;
+    height: 5.9rem;
+    width: 100%;
+    padding: 1.5rem;
+}
+
+.trending{
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.trending-card h2{
+    margin: 0;
+    margin-top: 1rem;
+}
+
+.body-trending img{
+    width: 2.8rem;
+    height: auto;
+}
+
+.body-trending p{
+    margin: 0;
+    color: grey;
+}
+
+.body-trending h3{
+    margin: 0;
+}
